# guacamole-server

./: .gitignore  Makefile.am  configure.ac
doc/libguac/: Doxyfile
doc/libguac-terminal/: Doxyfile
src/guacd/: guacd
src/guacd/man/: guacd.8  guacd.conf.5
src/guacenc/: guacenc
src/guacenc/man/: guacenc.1
src/guaclog/: guaclog
src/guaclog/man/: guaclog.1
src/libguac/: protocol.c
src/libguac/guacamole/: protocol.h
src/protocols/rdp/: _generated_keymaps.c
src/protocols/x2gokdrive/: Makefile.am  client.c  client.h  input.c  input.h  kdrive.c  kdrive.h  session-priv.h  session.c  session.h  settings.c  settings.h  user.c  user.h
